--- a/6 - Algorithm Analysis.ipynb
+++ b/6 - Algorithm Analysis.ipynb
@@ -240,57 +240,296 @@
     "\n",
     "For example: $A(m \\times n) \\cdot B (n \\times k)$ can be finished in $O(n)$ time instead of $O(m*n*k)$, when executed in parallel using $m*k$ processors. (This is the example from the image).\n",
     "\n",
-    "As our example of data parallelism, we are going to use "
+    "As our example of task parallelism, we are going to use a very simple workflow - computing the square root of many numbers in parallel and computing the square of many numbers concurrently. This way, we have a single instruction (sqrt) which is run on some data, and a second instruction (square) which is run on other data. Based on the fact that all of the input data is in one data pool, a list, this is task parallelism because we are applying different tasks to data in different parts of the same data pool."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## IV. Maximum Speedups"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example 6.4 - Timing Fibonacci and Monte Carlo"
+    "# Data parallel matrix multiplication\n",
+    "import random\n",
+    "import multiprocessing\n",
+    "from itertools import starmap, repeat\n",
+    "from operator import mul\n",
+    "\n",
+    "def calc_row_of_product_matrix(a_row, b, izip=zip):\n",
+    "    '''Calculate a row of the product matrix P = A * B\n",
+    "    Arguments:\n",
+    "      a_row is af A\n",
+    "      b is the B matrix\n",
+    "    returns the corresponding row of P matrix'''\n",
+    "    return map(lambda col: sum(starmap(mul,zip(a_row,col))), zip(*b))\n",
+    "\n",
+    "def eval_func_tuple(f_args):\n",
+    "    '''Takes a tuple of a function and args, evaluates and returns result'''\n",
+    "    return f_args[0](*f_args[1:])\n",
+    "\n",
+    "class multimatrix(list):\n",
+    "\n",
+    "    def __mul__(self, b, izip=zip, repeat=repeat):\n",
+    "        '''Concurrent matrix multiplication with multiprocessing.Pool. '''\n",
+    "        pool = multiprocessing.Pool(multiprocessing.cpu_count())\n",
+    "        return pool.map(eval_func_tuple, izip(repeat(calc_row_of_product_matrix), self, repeat(b))) \n",
+    "\n",
+    "class itermatrix(list):\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def sumprod(row, col, sum=sum, starmap=starmap, mul=mul):\n",
+    "        '''Returns sumproduct of two vectors.'''\n",
+    "        return sum(starmap(mul,zip(row,col)))\n",
+    "\n",
+    "    def __mul__(self, b, imap=map, izip=zip):\n",
+    "        '''Matrix multiplication returning iterable of iterables'''\n",
+    "        return map(lambda row: map(lambda col: itermatrix.sumprod(row, col), zip(*b)), self)\n",
+    "\n",
+    "def iterate_results(result):\n",
+    "    '''Iterate over iterable of iterables,\n",
+    "    and returns elements in list of lists.\n",
+    "    Usage: if you want to run the whole calculation at once:\n",
+    "    p = iterate_results(itermatrix([[1, 3], [-5, 6], [2, 4]]) * itermatrix([[1, 4], [8, 7]]))'''\n",
+    "    return[[col for col in row] for row in result]\n",
+    "\n",
+    "def random_v(K=1000,min=-1000,max=1000):\n",
+    "    '''Generates a random vector of dimension N;\n",
+    "    Returns a list of integers.\n",
+    "    The values are integers in the range [min,max].'''\n",
+    "    return [random.randint(min,max) for k in range(K)]\n",
+    "\n",
+    "def random_m(N=1000, K=1000):\n",
+    "    '''Generates random matrix. Returns list of list of integers.'''\n",
+    "    return [random_v(K) for n in range(N)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[25, 25], [43, 22], [34, 36]] iter test OK\n",
+      "CPU times: user 43 µs, sys: 135 µs, total: 178 µs\n",
+      "Wall time: 146 µs\n"
+     ]
+    }
+   ],
    "source": [
-    "## V. Real World Middle Ground Examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example 6.5 - "
+    "%%time\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    a = [[1, 3], [-5, 6], [2, 4]]\n",
+    "    b = [[1, 4], [8, 7]]\n",
+    "    adotb = [[25, 25], [43, 22], [34, 36]]\n",
+    "    #A = multimatrix(a)\n",
+    "    #B = multimatrix(b)\n",
+    "    #prod = A * B\n",
+    "    #assert(adotb == prod)\n",
+    "    #print(prod, \"multi test OK\")\n",
+    "    A = itermatrix(a)\n",
+    "    B = itermatrix(b)\n",
+    "    iterprod = A * B\n",
+    "    listprod = iterate_results(iterprod)\n",
+    "    assert(adotb == listprod)\n",
+    "    print(listprod, \"iter test OK\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 1.4142135623730951, 2.0, 2.449489742783178, 2.8284271247461903, 3.1622776601683795, 3.4641016151377544, 3.7416573867739413, 4.0]\n",
+      "[1, 9, 25, 49, 81, 121, 169, 225, 289]\n",
+      "[0.0, 1.4142135623730951, 2.0, 2.449489742783178, 2.8284271247461903, 3.1622776601683795, 3.4641016151377544, 3.7416573867739413, 4.0]\n",
+      "[1, 9, 25, 49, 81, 121, 169, 225, 289]\n",
+      "CPU times: user 984 ms, sys: 537 ms, total: 1.52 s\n",
+      "Wall time: 1.38 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Task parallel suqare roots and squares\n",
+    "import multiprocessing\n",
+    "\n",
+    "# I know there's a library function for this\n",
+    "# I want it to be a bit slower so we can see the\n",
+    "# performance benefits of the parallelism\n",
+    "def sqrt(n):\n",
+    "    return n**(0.5)\n",
+    "\n",
+    "def square(n):\n",
+    "    return n**2\n",
+    "\n",
+    "run_serial = False # switch to True if you want to see it run slowly...\n",
+    "if run_serial:\n",
+    "    sqrts = []\n",
+    "    squares = []\n",
+    "    for i in range(1000000):\n",
+    "        if i%2 == 0:\n",
+    "            sqrts.append(sqrt(i))\n",
+    "        else:\n",
+    "            squares.append(square(i))\n",
+    "    print(sqrts[0:9])\n",
+    "    print(squares[0:9])\n",
+    "                           \n",
+    "\n",
+    "pool = multiprocessing.Pool(32)\n",
+    "sqrts = pool.map(sqrt, [i for i in range(1000000) if i%2==0])\n",
+    "squares = pool.map(square, [i for i in range(1000000) if i%2==1])\n",
+    "print(sqrts[0:9])\n",
+    "print(squares[0:9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV. Maximum Speedups\n",
+    "By now, you should understand that different types of algorithms can be helped by parallelization different amounts. Let's go ahead and quantify that. First, let's do some mathematical analysis and figure out how well we could do. The first major breakthrough in terms of parallel algorithm analysis is called [Amdahl's Law](https://en.wikipedia.org/wiki/Amdahl%27s_law). Formulated by Gene Amdahl in 1967, Amdahl's Law allows us to compute theoretical maximum speedups based on how parallelizable our tasks are. In order to figure out your theoretical maximum, you need to know how many processors you have access to and what percentage of your program can be parallelized. For example, if a program needs 20 hours using a single processor core, and a particular part of the program which takes one hour to execute cannot be parallelized, while the remaining 19 hours (p = 0.95, where p is the fraction of the code that can be parallelized) of execution time can be parallelized, then regardless of how many processors are devoted to a parallelized execution of this program, the minimum execution time cannot be less than that critical one hour. Hence, the theoretical speedup is limited to at most 20 times (1/(1 − p) = 20). For this reason, parallel computing with many processors is useful only for highly parallelizable programs. This image sums up Amdahl's law for various values of p.\n",
+    "![amdahl's law](https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/AmdahlsLaw.svg/640px-AmdahlsLaw.svg.png)\n",
+    "\n",
+    "Another parallel algorithm analysis law, the [Gustafson–Barsis Law](https://en.wikipedia.org/wiki/Gustafson%27s_law), gives the theoretical speedup in latency of the execution of a task at fixed execution time that can be expected of a system whose resources are improved. This law considers not how much faster your code can get, but instead how much more you can do with the same code in the same amount of time as you scale up your computer. Amdahl's law presupposes that the computing requirements will stay the same, given increased processing power. In other words, an analysis of the same data will take less time given more computing power.\n",
+    "\n",
+    "Gustafson, on the other hand, argues that more computing power will cause the data to be more carefully and fully analyzed: pixel by pixel or unit by unit, rather than on a larger scale. Where it would not have been possible or practical to simulate the impact of nuclear detonation on every building, car, and their contents (including furniture, structure strength, etc.) because such a calculation would have taken more time than was available to provide an answer, the increase in computing power will prompt researchers to add more data to more fully simulate more variables, giving a more accurate result.\n",
+    "\n",
+    "\n",
+    "Amdahl's Law reveals a limitation in, for example, the ability of multiple cores to reduce the time it takes for a computer to boot to its operating system and be ready for use. Assuming the boot process was mostly parallel, quadrupling computing power on a system that took one minute to load might reduce the boot time to just over fifteen seconds. But greater and greater parallelization would eventually fail to make bootup go any faster, if any part of the boot process were inherently sequential.\n",
+    "\n",
+    "Gustafson's law argues that a fourfold increase in computing power would instead lead to a similar increase in expectations of what the system will be capable of. If the one-minute load time is acceptable to most users, then that is a starting point from which to increase the features and functions of the system. The time taken to boot to the operating system will be the same, i.e. one minute, but the new system would include more graphical or user-friendly features.\n",
+    "\n",
+    "This image sums up Gustafson's law for various values of p (same p as earlier):\n",
+    "![Theoretical maximum speedup](https://cdn.comsol.com/wordpress/2014/03/Graph-depicting-how-the-size-of-the-job-increases-with-the-number-of-available-processes.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 6.4 - Timing Fibonacci and Monte Carlo\n",
+    "Given all of that theory we just learned, what do you think the value of _p_ is for the Monte Carlo pi simulation? For the Fibonacci sequence generator? Think about it for a moment. Read ahead when you've got a guess. For the Monte Carlo Pi, the value of _p_ is very close to 1, while for the Fibonacci sequence generator, the value of _p_ is very close to 0. Hopefully the description and examples of those tasks make those values believable to you. In case they don't, we're going to time them right now, in this example. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Defining parallel monte carlo pi calculation \n",
+    "\n",
+    "import random\n",
+    "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "\n",
+    "#caculate the number of points in the unit circle\n",
+    "#out of n points\n",
+    "def monte_carlo_pi_part(n):\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(n):\n",
+    "        x=random.random()\n",
+    "        y=random.random()\n",
+    "        \n",
+    "        # if it is within the unit circle\n",
+    "        if x*x + y*y <= 1:\n",
+    "            count=count+1\n",
+    "        \n",
+    "    #return\n",
+    "    return count  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esitmated value of Pi: 3.1408732 \n",
+      "CPU times: user 83.9 ms, sys: 674 ms, total: 758 ms\n",
+      "Wall time: 908 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Calling parallel monte carlo pi simulation\n",
+    "\n",
+    "# Nummber of points to use for the Pi estimation\n",
+    "n = 10000000\n",
+    "np = multiprocessing.cpu_count()\n",
+    "# iterable with a list of points to generate in each worker\n",
+    "# each worker process gets n/np number of points to calculate Pi from\n",
+    "\n",
+    "part_count=[n//np for i in range(np)]\n",
+    "\n",
+    "#Create the worker pool\n",
+    "# http://docs.python.org/library/multiprocessing.html#module-multiprocessing.pool\n",
+    "pool = Pool(processes=np)   \n",
+    "\n",
+    "# parallel map\n",
+    "count=pool.map(monte_carlo_pi_part, part_count)\n",
+    "\n",
+    "print(\"Esitmated value of Pi: {} \".format(sum(count)/(n*1.0)*4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 573 ms, sys: 3.8 s, total: 4.38 s\n",
+      "Wall time: 18.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import multiprocessing\n",
+    "import time\n",
+    "\n",
+    "# Fibonacci sequence on 32 cores\n",
+    "\n",
+    "# Compute Nth fibonacci number\n",
+    "def fib(n):\n",
+    "    if n==0 or n==1:\n",
+    "        return 1\n",
+    "    return fib(n-1) + fib(n-2)\n",
+    "\n",
+    "def calc_single_fib(i):\n",
+    "    before = time.time()\n",
+    "    res = fib(i)\n",
+    "    after = time.time()\n",
+    "    tot = after-before\n",
+    "\n",
+    "pool = multiprocessing.Pool(32)\n",
+    "tasks = pool.map(calc_single_fib, range(0, 40, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that even though we run each distinct fibonacci number in parallel, we can't parallelize the underlying function at all, so it's still very slow."
+   ]
   },
   {
    "cell_type": "markdown",
