--- a/3 - Parallel Algorithms.ipynb
+++ b/3 - Parallel Algorithms.ipynb
@@ -123,7 +123,7 @@
     "### Example 3.2 - Monte Carlo Frog Hop Simulation\n",
     "To illustrate the scalability of monte carlo algorithms, we're going to use an example problem which my professor Jeff Ely uses to test the mettle of CS 1 students. Imagine a frog who is sitting on an infinite flat plane. The frog always makes jumps of length 1 unit, in a randomly selected direction. What is the probablility that the frog will be within 1 unit of its original location after _n_ jumps?\n",
     "![frog-setup]()\n",
-    "You may realize that we can solve this problem with no programming at all, just math In this case, this is true, and we can use this fact to help us check our work. Often, especially in the fields of physics and differential equations, there are problems which cannot be solved other than numerically. We will solve this problem first in serial and then we will parallelize our solution later.### Example 3.2 - Monte Carlo Frog Hop Simulation"
+    "You may realize that we can solve this problem with no programming at all, just math. In this case, this is true, and we can use this fact to help us check our work. Often, especially in the fields of physics and differential equations, there are problems which cannot be solved other than numerically. We will solve this problem first in serial and then we will parallelize our solution later."
    ]
   },
   {
